--- a/style.css
+++ b/style.css
@@ -1,137 +1,116 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html,
-body,
-.wrapper {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  font-family: sans-serif;
-  background-color: #f9fbfd;
+    background-color: lightslategray;
+    font-size: 20px;
+}
+
+h1, 
+h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+}
+h2 {
+    padding: 0 10px 5px 10px;
+
+}
+
+hr {
+    background: #dadada;
+    border: none;
+    height: 2px;
 }
 
 .wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
+    margin: 0 auto;
+    background: #fff;
+    width: 700px;
+    border-radius: 5px;
+    padding: 40px;
+    box-shadow: 0 0 4px #5d5d5d;
 }
 
-header {
-  text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+.row {
+    width: 100%;
+    text-align: left;
 }
 
-.card {
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
-  border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
-  font-size: 18px;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 30px 40px;
+#pass {
+    width: 100%;
 }
 
-.card-header::after {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
+#textarea {
+    width: 94%;
+    border: 2px dashed #c0c7cf;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px 20px 50px 20px;
+    color: #808080;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 32pt;
+    height: auto;
+    resize: none;
 }
 
-.card-body {
-  min-height: 100px;
+.btns {
+   text-align: center;
+   color: #eee;
+   padding: 10px 10px 60px 10px;
+
 }
 
-.card-footer {
-  text-align: center;
+#copy, 
+#gen {
+    border-radius: 30px;
+    padding: 10px 20px 10px 20px;
+    border: none;
+    font-size: 24px;
+    color: #fff;
 }
 
-.card-footer::before {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
+#gen:active {
+    background: darkred;
 }
 
-.card-footer::after {
-  content: " ";
-  display: block;
-  clear: both;
+#gen {
+    background: #af0808; 
+    float: center;
 }
 
-.btn {
-  border: none;
-  background-color: hsl(360, 91%, 36%);
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: hsl(0, 0%, 100%);
-  display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
+#copy{
+    background: #c0c7cf;
+    float: right;
 }
 
-button[disabled] {
-  cursor: default;
-  background: #c0c7cf;
+@media screen and (min-width: 1024px) {
+    .wrapper {
+        max-width: 65%;
+    }
+}
+@media screen and (max-width: 768px) {
+    
+    .wrapper {
+        width: 83%;
+        margin: 0px;
+    }
 }
 
-.float-right {
-  float: right;
-}
+@media screen and (max-width: 425px) {
+    
+    .wrapper {
+        width: 90%;
+        margin: 0px;
+        padding: 10px;
+    }
 
-#password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
-}
+    h2 {
+        font-size: 18pt;
+    }
 
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
-  }
-
-  #password {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  }
+    #textarea {
+        width: 88%;
+    }
 }
