--- a/style.css
+++ b/style.css
@@ -1,116 +1,52 @@
+
 body {
-    background-color: lightslategray;
-    font-size: 20px;
+    background-color: darkgrey;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-h1, 
-h2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-}
-
 h1 {
     text-align: center;
-    color: white;
+    
 }
-h2 {
-    padding: 0 10px 5px 10px;
-
-}
-
-hr {
-    background: #dadada;
-    border: none;
-    height: 2px;
-}
-
-.wrapper {
-    margin: 0 auto;
-    background: #fff;
-    width: 700px;
-    border-radius: 5px;
-    padding: 40px;
-    box-shadow: 0 0 4px #5d5d5d;
-}
-
-.row {
-    width: 100%;
-    text-align: left;
-}
-
-#pass {
-    width: 100%;
-}
-
-#textarea {
-    width: 94%;
-    border: 2px dashed #c0c7cf;
-    border-radius: 10px;
+h3 {
     text-align: center;
-    padding: 10px 20px 50px 20px;
-    color: #808080;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 32pt;
-    height: auto;
-    resize: none;
 }
-
-.btns {
-   text-align: center;
-   color: #eee;
-   padding: 10px 10px 60px 10px;
-
-}
-
-#copy, 
-#gen {
-    border-radius: 30px;
-    padding: 10px 20px 10px 20px;
-    border: none;
-    font-size: 24px;
-    color: #fff;
-}
-
-#gen:active {
-    background: darkred;
-}
-
-#gen {
-    background: #af0808; 
+.primary-section {
     float: center;
+    width: 50%;
+    max-width: 700px;
+    padding: 50px;
+    margin: 0 auto;
+    border: 5px solid lightgray;
+    background-color: white;
+}
+#password {
+    text-align: center;
+    float: center;
+    width: 100%;
+    max-width: 800px;
+    min-height: 200px;
+    padding: 30px 0px 0px;
+    margin: 0 auto;
+    border: 4px solid darkgray;
+    background-color:white;
+}
+.button {
+    color:white;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 15px;
+    display: inline-block;
+    border: none;
+    transition: all 0.4x ease 0s;
+    align-content: center;
 }
 
-#copy{
-    background: #c0c7cf;
-    float: right;
-}
-
-@media screen and (min-width: 1024px) {
-    .wrapper {
-        max-width: 65%;
-    }
-}
-@media screen and (max-width: 768px) {
+#generate {
+    background: red;
     
-    .wrapper {
-        width: 83%;
-        margin: 0px;
-    }
 }
-
-@media screen and (max-width: 425px) {
-    
-    .wrapper {
-        width: 90%;
-        margin: 0px;
-        padding: 10px;
-    }
-
-    h2 {
-        font-size: 18pt;
-    }
-
-    #textarea {
-        width: 88%;
-    }
+#password {
+    font-size: 20px;
+    overflow: auto;
+    font-family: monospace;
 }
